# geometry-central

./: .gitignore  CMakeLists.txt  conanfile.py
src/: CMakeLists.txt
src/surface/: simple_polygon_mesh.cpp
test/: CMakeLists.txt
